k8s/namespace.yaml
---
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: punju-university
  labels:
    name: punju-university
